# simple_text_template

./: Cargo.toml  README.md  syntax.md
examples/: serde.rs  simple.rs
src/: context.rs  lib.rs  renderer.rs  tokenizer.rs
