[package]
name = "simple_text_template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10"
thiserror = "1.0"

[dependencies.serde]
version = "1.0"
optional = true

[dependencies.serde_json]
version = "1.0"
optional = true

[[example]]
name = "serde"
required-features = ["serde", "serde/derive"]

[features]
default = []
json = ["serde_json"]